# django_rest_api

./: README.md  compose.database.yml  pyproject.toml
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/store/: api_views.py  serializers.py  tests.py
