[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
Django = "5.0.6"
djangorestframework = "3.15.2"
django-filter = "24.2"
pillow = "10.4.0"
psycopg2 = "^2.9.10"
psycopg = "^3.2.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[virtualenvs]
create = true
in-project = true